load toNszuDecryption